2011-08-09 0.1.7:
 * Updated create_instance to return the Instance object rather 
   than the xml request, for consistency with describe_instance

2011-08-05 0.1.6:
 * clone volume changed to api call instead of CLI
 * support for deleting multiple volumes at once (delete_volumes)

2011-07-25 0.1.4:
 * Better display of launch times
 * delete_unused_keys function deletes all unused keys, prompting for each one
 * ability to find images by name display_images(:Name => "foo"), with fuzzy
   matching

2011-07-12 0.1.0:
 * Support for 'smartcloud' commandline tool wrapping the API