@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{cft_smartcloud}
-  s.version = "0.1.6"
+  s.version = "0.1.7"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["yan", "cohesive"]
-  s.date = %q{2011-08-09}
+  s.date = %q{2011-08-10}
   s.description = %q{CohesiveFT Ruby Interface for IBM SmartCloud and 'smartcloud' command line helper.}
   s.email = %q{yan.pritzker@cohesiveft.com}
   s.executables = ["cft_smartcloud", "smartcloud"]
